refactor App, Barrier, Door, DrawingThread, Entity, levels.fxml, module-info; improve error handling, enhance scene loading, and adjust layout properties